--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/black" />
+    <item>
+        <color android:color="#333333" />
+    </item>
     <item>
         <bitmap
             android:gravity="center"
